--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
     
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter-parent</artifactId>
-        <version>2.5.5</version>
+        <version>2.7.6</version>
         <relativePath/> <!-- lookup parent from repository -->
     </parent>
     <groupId>com.portfolioBackEnd</groupId>
@@ -16,6 +16,7 @@
     <description>portfolio project for Spring Boot</description>
     <properties>
         <java.version>11</java.version>
+        <start-class>com.portfolio.backend.BackendApplication</start-class>
     </properties>
     <dependencies>
         <dependency>
@@ -51,13 +52,12 @@
         </dependency>
         <dependency>
             <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-data-jpa</artifactId>
-            <version>2.6.5</version>
-            <type>module</type>
+            <artifactId>spring-boot-starter-data-jpa</artifactId>        
         </dependency>
         <dependency>
             <groupId>mysql</groupId>
             <artifactId>mysql-connector-java</artifactId>
+            <scope>runtime</scope>
         </dependency>
         <dependency>
             <groupId>org.springframework.boot</groupId>
@@ -76,8 +76,6 @@
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-validation</artifactId>
-            <version>3.0.0</version>
-            <type>module</type>
         </dependency>
         <dependency>
             <groupId>org.apache.commons</groupId>
